Updated spacing for cmsadmin; #302 & https://github.com/luyadev/luya-module-cms/issues/194

--- a/src/resources/scss/components/_luya.scss
+++ b/src/resources/scss/components/_luya.scss
@@ -110,10 +110,6 @@
     &::-webkit-scrollbar {
         display: none; // Safari and Chrome
     }
-
-    &-cmsadmin {
-        padding: 0;
-    }
     
     @media (min-width: $mobile-nav-breakpoint) {
         flex: 1 1;
